# Bilderbuch

./: .gitignore  .gitmodules  .prettierignore  README.md  bun.lockb  package.json
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  raw.rs
src/lib/: library.ts
src/routes/: +page.svelte
src/routes/image/: +page.svelte
src/routes/importer/: +page.svelte
src/routes/settings/: +page.svelte  +page.ts
