[package]
name = "bilderbuch"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["protocol-asset"] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quickraw = "0.1.6"
percent-encoding = "2.3.1"
rawler = "0.6.0"
image = "=0.25.5"
rawtojpg = { path = "./rawtojpg" }
memmap2 = "0.9.5"
tauri-plugin-fs = "2.2.0"
